    use tabs but use spaces for formatting
  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/?? IAlibay, Luthaf, hmacdope, rafaelpap, jbarnoud, BFedder, aya9aladdin,
         jaclark5, jfennick, lilyminium

 * 2.4.0

Fixes
  * XTC and TRR readers now fail with IOError when a status except EOK (=0) is
    detected on reading a frame instead of silently continuing
  * Consolidate license files across MDAnalysis library packages (PR #3939)
  * Kwargs passed through to `MemoryReader` when using `transfer_to_memory()`
    and `in_memory=True`.
  * NoDataError raised on empty atomgroup provided to `DCDReader.timeseries` 
    was changed to ValueError (see #3901). A matching ValueError was added to
    `MemoryReader.timeseries`(PR #3890). 
  * Removes ``pbc`` kwarg from ``AtomGroup.wrap`` (Issue #3909)
  * LAMMPSDump Reader translates the box to the origin (#3741)
  * hbond analysis: access hbonds results through new results member in count_by_ids() and count_by_type()
  * Auxiliary; determination of representative frames: Removed undefined
    behaviour for cutoff values < -1 (PR # 3749)
  * Fixes distances.between not always returning AtomGroup (Issue #3794)
  * Upgrade to chemfiles 0.10.3 (Issue #3798)
  * fixes guessed_attributes and read_attributes methods of the Topology class, as 
    those methods were giving unexpected results for some topology attributes
    (e.g. bonds, angles) (PR #3779).

Enhancements
  * Improve C content of libxdr Cython, add `read_direct` methods to read 
    coordinates, velocities and forces directly into memoryviews of `Timestep`
    attributes, make `TRR` timestep have positions, velocities and forces on
    `__init__`. (Issue #3891 PR  #3892).
  * Improve C content of libdcd Cython (Issue #3882, PR #3888)